--- a/index.html
+++ b/index.html
@@ -3,40 +3,38 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PomponDamour - Villa avec Jacuzzi</title>
+  <title>PomponDamour - Villa avec Jacuzzi à Nîmes</title>
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background-color: #f5f5f5;
-      color: #333;
+      background-color: #fff8f4;
+      color: #2d2d2d;
+      line-height: 1.6;
     }
     header {
-      background: #e3b7b7;
-      padding: 20px;
+      background-color: #fddde6;
+      padding: 2rem;
       text-align: center;
     }
     header h1 {
       margin: 0;
-      font-size: 2.5em;
+      font-size: 3em;
+      color: #a83f58;
     }
     nav {
       text-align: center;
-      margin: 10px 0;
+      background: #fff0f5;
+      padding: 10px 0;
     }
     nav a {
       margin: 0 15px;
       text-decoration: none;
-      color: #800000;
+      color: #a83f58;
       font-weight: bold;
     }
-    section {
-      padding: 40px 20px;
-      max-width: 900px;
-      margin: auto;
-    }
     .hero {
-      background-image: url('https://source.unsplash.com/1600x600/?villa,jacuzzi');
+      background-image: url('https://source.unsplash.com/1600x600/?jacuzzi,villa,romantic');
       background-size: cover;
       background-position: center;
       height: 300px;
@@ -44,59 +42,91 @@
       align-items: center;
       justify-content: center;
       color: white;
-      font-size: 2em;
-      text-shadow: 2px 2px 5px rgba(0,0,0,0.6);
+      font-size: 2.5em;
+      text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.6);
+    }
+    section {
+      padding: 40px 20px;
+      max-width: 960px;
+      margin: auto;
+    }
+    .gallery {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
     }
     .gallery img {
-      width: 100%;
-      max-width: 300px;
-      margin: 10px;
-      border-radius: 10px;
+      width: 300px;
+      border-radius: 15px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     }
     footer {
-      background: #ddd;
+      background: #f0e0e5;
       text-align: center;
       padding: 20px;
+      margin-top: 40px;
     }
   </style>
 </head>
 <body>
   <header>
     <h1>PomponDamour</h1>
-    <p>Votre villa de charme avec jacuzzi</p>
+    <p>Villa romantique avec jacuzzi - Quartier des Amoureux, Nîmes</p>
   </header>
   <nav>
     <a href="#about">À propos</a>
     <a href="#services">Services</a>
     <a href="#gallery">Galerie</a>
+    <a href="#proximite">À proximité</a>
+    <a href="#nimes">Explorer Nîmes</a>
     <a href="#contact">Contact</a>
   </nav>
-  <div class="hero">Détente et confort au cœur de la nature</div>
+  <div class="hero">Évadez-vous à deux...</div>
   <section id="about">
     <h2>À propos</h2>
-    <p>Bienvenue à PomponDamour, une charmante villa nichée dans un cadre paisible, idéale pour vos séjours romantiques ou vos escapades bien-être. Profitez du jacuzzi privatif et d'une atmosphère chaleureuse tout au long de l'année.</p>
+    <p>Bienvenue à <strong>PomponDamour</strong>, un cocon de douceur situé dans le quartier des Amoureux à Nîmes. Idéal pour un week-end romantique, notre villa vous invite à la détente avec son jacuzzi privatif et son ambiance chaleureuse.</p>
   </section>
   <section id="services">
     <h2>Nos Services</h2>
     <ul>
-      <li>Jacuzzi extérieur privatif</li>
-      <li>Coin cuisine tout équipé</li>
-      <li>Chambre cosy avec literie haut de gamme</li>
+      <li>Jacuzzi privatif extérieur</li>
+      <li>Chambre double élégante et confortable</li>
+      <li>Cuisine équipée pour vos repas</li>
       <li>Connexion Wi-Fi gratuite</li>
-      <li>Parking privé sécurisé</li>
+      <li>Discrétion et tranquillité garanties</li>
     </ul>
   </section>
   <section id="gallery" class="gallery">
     <h2>Galerie</h2>
-    <img src="https://source.unsplash.com/300x200/?jacuzzi" alt="Jacuzzi">
-    <img src="https://source.unsplash.com/300x200/?villa,bedroom" alt="Chambre">
-    <img src="https://source.unsplash.com/300x200/?kitchen" alt="Cuisine">
+    <img src="https://source.unsplash.com/300x200/?villa,jacuzzi" alt="Jacuzzi romantique">
+    <img src="https://source.unsplash.com/300x200/?bedroom,cozy" alt="Chambre cosy">
+    <img src="https://source.unsplash.com/300x200/?nimes,southfrance" alt="Nîmes ambiance">
+  </section>
+  <section id="proximite">
+    <h2>À découvrir à proximité</h2>
+    <p>
+      Lors de votre séjour à la villa <strong>PomponDamour</strong>, profitez des nombreuses activités qu’offre Nîmes. 
+      Pour des idées d’hébergements complémentaires ou d’escapades romantiques, consultez 
+      <a href="https://nimes-tourisme.com/sejourner/hebergements/chambres-d-hotes/" target="_blank" rel="noopener">
+        les chambres d’hôtes de Nîmes
+      </a>.
+    </p>
+  </section>
+  <section id="nimes">
+    <h2>Explorer Nîmes</h2>
+    <p>Profitez de votre séjour pour visiter les sites incontournables de la ville et obtenir de précieuses informations touristiques :</p>
+    <ul>
+      <li><a href="https://nimes-tourisme.com/sejourner/hebergements/chambres-d-hotes/" target="_blank">Chambres d’hôtes à Nîmes</a></li>
+      <li><a href="plan_nimes_A3_MARS_2024.pdf" target="_blank">📍 Plan touristique de Nîmes (A3)</a></li>
+      <li><a href="plan-touristique-F-mars-2024-2.pdf" target="_blank">🗺️ Carte touristique de la ville</a></li>
+      <li><a href="Guide-2025_BD.pdf" target="_blank">📘 Guide touristique 2025</a></li>
+    </ul>
   </section>
   <section id="contact">
     <h2>Contact</h2>
-    <p>Pour réserver ou en savoir plus :</p>
-    <p>Email : contact@pompondamour.fr</p>
-    <p>Téléphone : 06 12 34 56 78</p>
+    <p>Les réservations seront bientôt ouvertes.</p>
+    <p>Pour toute question, contactez-nous à : <strong>contact@pompondamour.fr</strong></p>
   </section>
   <footer>
     &copy; 2025 PomponDamour. Tous droits réservés.
